# ks_discord_bot

./: .gitignore  clan_mamber.txt  ksbot.py  main.py  player_data.txt  pubg_api.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh
cogs/: balancer.py  game.py  msg.py  music.py  user.py
ks_bot/: __init__.py  ks_bot.py
ks_bot/cogs/: balancer.py  game.py  msg.py  music.py  user.py
ks_bot/common/: __init__.py  common.py  dataclass.py  enum.py  error.py
ks_bot/core/: db_handler.py  get_youtube.py  help.py  pubg_api.py  pubg_balancer.py  request_handler.py  sqlite_db.py
ks_bot/utils/: utils.py
module/ksbot/: __init__.py
tests/: conftest.py  debug.py  testdata.py
tests/core/: test_db_handler.py  test_get_youtube.py  test_pubg_api.py  test_pubg_balancer.py  test_request_handler.py
utils/: confirm.py  get_youtube.py  help.py  page.py  pubg_api.py
