[tool.poetry]
name = "ks_bot"
version = "0.1.4"
description = "ks_bot"
authors = ["Your Name <thsxogud1123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = { version = "*", extras = ["voice"] }
yt-dlp = "*" 
youtube-search-python = "*"
termcolor = "*"
pytz = "*"
aiosqlite = "*"
aiohttp = "*"
aiohttp_retry = "*"

[tool.poetry.dev-dependencies]
pytest = "*" 
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
